--- a/netflixmanifest/service.yaml
+++ b/netflixmanifest/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: Netflix
+  name: netflix
 spec:
   ports:
   - port: 80
     targetPort: 80
   selector:
-    app: Netflix
+    app: netflix
