--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: yarn install
-      run: | 
+    - name: ubuntu update
+      run: |
+         sudo apt-get autoclean -y
+         sudo apt-get update
+         sudo apt-get upgrade -y
          sudo rm -rf node_modules
          yarn cache clean
          yarn
-         yarn start
     - name: Build & Push Image
       run: | 
         echo "${{ secrets.DOCKERPW }}" | docker login -u "lekhaselliah" --password-stdin
